# anycms-event

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.claude/skills/anycms-event-guide/: SKILL.md
crates/anycms-event-actix/: Cargo.toml
crates/anycms-event-actix/src/: extractor.rs  lib.rs  sse.rs  state.rs
crates/anycms-event-axum/: Cargo.toml
crates/anycms-event-axum/src/: extractor.rs  lib.rs  sse.rs  state.rs  trait_def.rs
crates/anycms-event-derive/: Cargo.toml
crates/anycms-event-derive/src/: lib.rs
crates/anycms-event-redis/: Cargo.toml
crates/anycms-event-redis/src/: error.rs  lib.rs  transport.rs
crates/anycms-event-redis/tests/: redis_integration.rs
crates/anycms-event-sse/: Cargo.toml
crates/anycms-event-sse/src/: bridge.rs  error.rs  event.rs  filter.rs  lib.rs
docs/: upgrade-roadmap-web-integration.md
docs/prd/: event-bus.md
examples/: actix_integration.rs  axum_integration.rs  basic_usage.rs  custom_rule_storage.rs  error_handling.rs  graceful_shutdown.rs  real_world.rs  redis_distributed.rs  retry_dead_letter.rs  sse_actix.rs  sse_axum.rs  telemetry.rs  testing_collector.rs  topic_subscription.rs  transport_trait.rs  trigger_workflow.rs
src/: builder.rs  bus.rs  error.rs  event.rs  execution_log.rs  handler.rs  lib.rs  prelude.rs  registry.rs  telemetry.rs  telemetry_metrics.rs  testing.rs  topic.rs  transport.rs  trigger.rs
tests/: integration_test.rs  macro_test.rs  management_test.rs
