[workspace]
members = [
    ".",
    "crates/anycms-event-derive",
    "crates/anycms-event-redis",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
license = "MIT"
homepage = "https://anycms.org"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-util = "0.3"
anycms-event-derive = { version = "0.1.1", path = "crates/anycms-event-derive" }
anycms-event = { version = "0.1.1", path = "." }

# ── anycms-event (core) ──────────────────────────────────────

[package]
name = "anycms-event"
description = "A type-safe, async event bus system for AnyCMS"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anycms-event-derive.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
anycms-event-redis = { path = "crates/anycms-event-redis" }
actix-web = "4"
axum = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
