[workspace]
members = [
    ".",
    "crates/anycms-event-derive",
    "crates/anycms-event-redis",
    "crates/anycms-event-axum",
    "crates/anycms-event-actix",
    "crates/anycms-event-sse",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
license = "MIT"
homepage = "https://anycms.org"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-util = "0.3"
dashmap = "6"
anycms-event-derive = { version = "0.1.4", path = "crates/anycms-event-derive", registry = "r404" }
anycms-event = { version = "0.1.4", path = ".", registry = "r404" }
anycms-event-sse = { version = "0.1.4", path = "crates/anycms-event-sse", registry = "r404" }
anycms-event-redis = { version = "0.1.4", path = "crates/anycms-event-redis", registry = "r404" }

# ── anycms-event (core) ──────────────────────────────────────

[package]
name = "anycms-event"
description = "A type-safe, async event bus system for AnyCMS"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
anycms-event-derive.workspace = true
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
anycms-event-redis = { path = "crates/anycms-event-redis" }
anycms-event-sse = { path = "crates/anycms-event-sse" }
actix-web = "4"
axum = "0.8"
futures-util = "0.3"
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }

[features]
default = []
testing = ["tokio/time"]
prometheus = ["dep:prometheus"]
