[package]
name = "anycms-event-axum"
description = "Axum integration for anycms-event"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anycms-event.workspace = true
anycms-event-sse = { path = "../anycms-event-sse", optional = true }
axum = "0.8"
http = "1"
tokio = { workspace = true, features = ["sync", "time"] }
futures-util.workspace = true
serde_json.workspace = true
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
sse = ["dep:anycms-event-sse", "serde", "tracing"]
