[package]
name = "anycms-event-axum"
description = "Axum integration for anycms-event"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/anycms-event-axum"

[dependencies]
anycms-event.workspace = true
anycms-event-sse = { workspace = true, optional = true }
axum = "0.8"
http = "1"
tokio = { workspace = true, features = ["sync", "time"] }
futures-util.workspace = true
serde_json.workspace = true
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
sse = ["dep:anycms-event-sse", "serde", "tracing"]
