[package]
name = "anycms-event-derive"
description = "Procedural macros for anycms-event"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
