[package]
name = "anycms-event-redis"
description = "Redis transport for anycms-event distributed event bus"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anycms-event.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
