[package]
name = "anycms-event-redis"
description = "Redis transport for anycms-event distributed event bus"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/anycms-event-redis"

[dependencies]
anycms-event.workspace = true
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
